<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/aboutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/headerText"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="281dp" />

    <TextView
        android:id="@+id/devText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/myName"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/standardText"
        app:layout_constraintTop_toBottomOf="@+id/aboutHeader"
        tools:layout_editor_absoluteX="336dp" />

    <TextView
        android:id="@+id/mailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/myMail"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/devText"
        tools:layout_editor_absoluteX="336dp" />
</android.support.constraint.ConstraintLayout>